testing .md update

--- a/README.html
+++ b/README.html
@@ -369,7 +369,7 @@ summary {
 <h1><strong>-TidyTuesday</strong></h1>
 <p>The repo includes my contribution to #TidyTuesday from 2019, week 35.</p>
 <div id="section" class="section level2">
-<h2>|<a href="./2020/">2020</a> |</h2>
+<h2>| <a href="2020/">2020</a> |</h2>
 <table>
 <thead>
 <tr class="header">
@@ -379,8 +379,8 @@ summary {
 </thead>
 <tbody>
 <tr class="odd">
-<td align="center"><a href="./2020/week%2039/data/">Week 39</a></td>
-<td align="center"><a href="./2020/week%2039/week39plot.png">Himalayan Climbing Expeditions</a></td>
+<td align="center"><a href="2020/week%2039/data/">Week 39</a></td>
+<td align="center"><a href="2020/week%2039/week39plot.png">Himalayan Climbing Expeditions</a></td>
 </tr>
 </tbody>
 </table>
