testing .md update

--- a/README.html
+++ b/README.html
@@ -368,13 +368,14 @@ summary {
 <div id="tidytuesday" class="section level1">
 <h1><strong>-TidyTuesday</strong></h1>
 <p>The repo includes my contribution to #TidyTuesday from 2019, week 35.</p>
+<p><a href="2020/week%2013/week%2013%20plot.jpeg">c</a></p>
 <div id="section" class="section level2">
 <h2>| <a href="2020/">2020</a> |</h2>
 <table>
 <thead>
 <tr class="header">
-<th align="center">Data</th>
-<th align="center">Plot</th>
+<th align="center"><strong>Data</strong></th>
+<th align="center"><strong>Plot</strong></th>
 </tr>
 </thead>
 <tbody>
